# RickAndMortyScrapper

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  scrap.py
CollectiblesApp/: index.html  package-lock.json  package.json
CollectiblesApp/src/: main.jsx
CollectiblesApp/src/api/: backend_path.js  characters.js  episode_requests.js  home_request.js
CollectiblesApp/src/pages/: App.jsx
CollectiblesApp/src/routes/: AppRouter.jsx
RickAndMortyScrapper/: settings.py  urls.py
backend/: manage.py
backend/RickAndMortyScrapper/: asgi.py  settings.py  urls.py  wsgi.py
backend/game/: admin.py  mixins.py  serializers.py  views.py
backend/game/migrations/: 0001_initial.py  0002_appuser_is_staff_alter_appuser_country_and_more.py  0003_like_remove_usercard_is_liked_alter_appuser_groups_and_more.py
backend/game/templates/: login.html  registration.html
backend/game/tests/: fixtures.py  test_usercard_api.py
backend/scrapper/: admin.py  serializer.py  views.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx
game/: forms.py  mixins.py  models.py  serializers.py  views.py
game/migrations/: 0001_initial.py
game/tests/: fixtures.py  test_usercard_actions.py  test_usercard_api.py
scrapper/: models.py  views.py
scrapper/migrations/: 0006_origin_location.py  0007_alter_character_image.py  0008_alter_character_url_alter_episode_name_and_more.py
scrapper/spider/: Spider.py  character_spider.py  episode_spider.py  location_spider.py
(+57 files in other folders)
